Removed not used banner image

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body onload="whenLoaded()" src="script.js"> 
        
     <header class="mainHeader" role="banner">
-            <img src="banner3.png" alt="Banner Image" width="100%", height="200px"/>
+            <img src="banner.png" alt="Banner Image" width="100%", height="200px"/>
     </header>
         
 <h1 id="title_text"> Unit Converter </h1>
